New buttons, new functionalities
New buttons added:
-Music
-Load Brain to Cache
-More Traffic and More AI

--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
   </head>
   <body>
   <canvas id="carCanvas"></canvas>
+  <div id="info">
+    <h1></h1>
+  </div>
   <div id="verticalButtons">
+    <button onClick="play()">Music🎹</button>
+    <button onClick="moreTraffic()">More Traffic!🚙</button>
+    <button onClick="moreAI()">More AI!🏎️</button>
     <button onclick="save()">Save Brain🧠</button>
+    <button onclick="loadCache()">Load Brain To Cache🧠</button>
     <button onclick="discard()">Discard Brain🚫</button>
   </div>
   <canvas id="networkCanvas"></canvas>
